# aryabhata-l1

./: .gitignore  Aryabhata.Consensus.FFI  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  INVARIANTS.md
docs/v1/: README.md
docs/v2/: ARCHITECTURE.md  CNS.md  MOBILE.md  README.md  SUNYA-POW.md  TREASURY.md  WALLET.md
genesis/: genesis.json
haskell/: aryabhata.cabal
haskell/src/Aryabhata/Consensus/: CNS.hs  Checkpoint.hs  Core.hs  Difficulty.hs  Fork.hs  Mempool.hs  Penalty.hs  Reward.hs  State.hs  Supply.hs  Types.hs  UTXO.hs  ZeroPoW.hs
haskell/src/Aryabhata/Proof/: ConsensusTests.hs  Properties.hs  SecurityTests.hs  SupplyTests.hs  UTXOTests.hs
haskell/src/Aryabhata/Types/: Block.hs  Transaction.hs
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  node.rs  types.rs
rust/src/crypto/: argon.rs  hash.rs  kem.rs  keys.rs  mod.rs  signing.rs
rust/src/ffi/: mod.rs  protocol.rs
rust/src/mining/: mod.rs  pow.rs  scheduler.rs
rust/src/network/: message.rs  mod.rs  peer.rs
rust/src/node/: cns_tracker.rs  config.rs  lifecycle.rs  mod.rs  storage.rs  treasury.rs  wallet.rs
scripts/: build_termux.sh
