cabal-version: 3.0
name:          aryabhata-consensus
version:       0.2.0
synopsis:      Aryabhata L1 — Consensus Engine
license:       MIT

library
  hs-source-dirs: src
  exposed-modules:
      Aryabhata.Consensus.Core
    , Aryabhata.Consensus.CNS
    , Aryabhata.Consensus.Difficulty
    , Aryabhata.Types.Block
    , Aryabhata.Types.Transaction
    , Aryabhata.Proof.Properties
  build-depends:
      base       >= 4.14
    , QuickCheck >= 2.14
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O2
