[package]
name = "aryabhata-node"
version = "0.2.0"
edition = "2021"
description = "Aryabhata L1 — Execution Shell"
license = "MIT"

[[bin]]
name = "aryabhata-node"
path = "src/main.rs"

[dependencies]
zeroize = { version = "1.7", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
